frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> program element
Rule 3     element -> function
Rule 4     element -> declaration Semi
Rule 5     program -> empty
Rule 6     type -> Int
Rule 7     function -> type Identifier LParen parameter RParen LBrace block RBrace
Rule 8     parameter -> parameter params
Rule 9     parameter -> empty
Rule 10    params -> Comma declaration
Rule 11    params -> declaration
Rule 12    params -> type Identifier dim_list
Rule 13    block -> block block_item
Rule 14    block -> empty
Rule 15    block_item -> statement
Rule 16    block_item -> declaration Semi
Rule 17    statement -> statement_matched
Rule 18    statement -> statement_unmatched
Rule 19    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 20    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 21    statement_unmatched -> If LParen expression RParen statement
Rule 22    statement_matched -> While LParen expression RParen statement_matched
Rule 23    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 24    statement_matched -> For LParen expression Semi expression Semi expression RParen statement_matched
Rule 25    statement_matched -> For LParen declaration Semi expression Semi expression RParen statement_matched
Rule 26    statement_unmatched -> For LParen expression Semi expression Semi expression RParen statement_unmatched
Rule 27    statement_unmatched -> For LParen declaration Semi expression Semi expression RParen statement_unmatched
Rule 28    statement_matched -> Return expression Semi
Rule 29    statement_matched -> opt_expression Semi
Rule 30    statement_matched -> LBrace block RBrace
Rule 31    statement_matched -> Break Semi
Rule 32    statement_matched -> Continue Semi
Rule 33    opt_expression -> expression
Rule 34    opt_expression -> empty
Rule 35    declaration -> type Identifier
Rule 36    declaration -> type Identifier Assign expression
Rule 37    declaration -> type Identifier dim_list
Rule 38    dim_list -> LBracket RBracket
Rule 39    dim_list -> LBracket Integer RBracket
Rule 40    dim_list -> dim_list LBracket Integer RBracket
Rule 41    declaration -> type Identifier dim_list Assign init_list
Rule 42    init_list -> LBrace init_elem RBrace
Rule 43    init_elem -> Integer
Rule 44    init_elem -> init_elem Comma Integer
Rule 45    expression -> assignment
Rule 46    assignment -> conditional
Rule 47    conditional -> logical_or
Rule 48    logical_or -> logical_and
Rule 49    logical_and -> bit_or
Rule 50    bit_or -> xor
Rule 51    xor -> bit_and
Rule 52    bit_and -> equality
Rule 53    equality -> relational
Rule 54    relational -> additive
Rule 55    additive -> multiplicative
Rule 56    multiplicative -> unary
Rule 57    unary -> postfix
Rule 58    postfix -> primary
Rule 59    expression_list -> expression_list exprs
Rule 60    expression_list -> empty
Rule 61    exprs -> Comma expression
Rule 62    exprs -> expression
Rule 63    postfix -> Identifier LParen expression_list RParen
Rule 64    postfix -> postfix LBracket expression RBracket
Rule 65    unary -> Minus unary
Rule 66    unary -> BitNot unary
Rule 67    unary -> Not unary
Rule 68    assignment -> postfix Assign expression
Rule 69    logical_or -> logical_or Or logical_and
Rule 70    logical_and -> logical_and And bit_or
Rule 71    bit_or -> bit_or BitOr xor
Rule 72    xor -> xor Xor bit_and
Rule 73    bit_and -> bit_and BitAnd equality
Rule 74    equality -> equality NotEqual relational
Rule 75    equality -> equality Equal relational
Rule 76    relational -> relational Less additive
Rule 77    relational -> relational Greater additive
Rule 78    relational -> relational LessEqual additive
Rule 79    relational -> relational GreaterEqual additive
Rule 80    additive -> additive Plus multiplicative
Rule 81    additive -> additive Minus multiplicative
Rule 82    multiplicative -> multiplicative Mul unary
Rule 83    multiplicative -> multiplicative Div unary
Rule 84    multiplicative -> multiplicative Mod unary
Rule 85    conditional -> logical_or Question expression Colon conditional
Rule 86    primary -> Integer
Rule 87    primary -> Identifier
Rule 88    primary -> LParen expression RParen

Terminals, with rules where they appear

And                  : 70
Assign               : 36 41 68
BitAnd               : 73
BitNot               : 66
BitOr                : 71
Break                : 31
Colon                : 85
Comma                : 10 44 61
Continue             : 32
Div                  : 83
Else                 : 19 20
Equal                : 75
For                  : 24 25 26 27
Greater              : 77
GreaterEqual         : 79
Identifier           : 7 12 35 36 37 41 63 87
If                   : 19 20 21
Int                  : 6
Integer              : 39 40 43 44 86
LBrace               : 7 30 42
LBracket             : 38 39 40 64
LParen               : 7 19 20 21 22 23 24 25 26 27 63 88
Less                 : 76
LessEqual            : 78
Minus                : 65 81
Mod                  : 84
Mul                  : 82
Not                  : 67
NotEqual             : 74
Or                   : 69
Plus                 : 80
Question             : 85
RBrace               : 7 30 42
RBracket             : 38 39 40 64
RParen               : 7 19 20 21 22 23 24 25 26 27 63 88
Return               : 28
Semi                 : 4 16 24 24 25 25 26 26 27 27 28 29 31 32
While                : 22 23
Xor                  : 72
error                : 

Nonterminals, with rules where they appear

additive             : 54 76 77 78 79 80 81
assignment           : 45
bit_and              : 51 72 73
bit_or               : 49 70 71
block                : 7 13 30
block_item           : 13
conditional          : 46 85
declaration          : 4 10 11 16 25 27
dim_list             : 12 37 40 41
element              : 2
empty                : 5 9 14 34 60
equality             : 52 73 74 75
expression           : 19 20 21 22 23 24 24 24 25 25 26 26 26 27 27 28 33 36 61 62 64 68 85 88
expression_list      : 59 63
exprs                : 59
function             : 3
init_elem            : 42 44
init_list            : 41
logical_and          : 48 69 70
logical_or           : 47 69 85
multiplicative       : 55 80 81 82 83 84
opt_expression       : 29
parameter            : 7 8
params               : 8
postfix              : 57 64 68
primary              : 58
program              : 2 0
relational           : 53 74 75 76 77 78 79
statement            : 15 21
statement_matched    : 17 19 19 20 22 24 25
statement_unmatched  : 18 20 23 26 27
type                 : 7 12 35 36 37 41
unary                : 56 65 66 67 82 83 84
xor                  : 50 71 72

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . program element
    (5) program -> . empty
    (1) empty -> .

    Int             reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)

    program                        shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . element
    (3) element -> . function
    (4) element -> . declaration Semi
    (7) function -> . type Identifier LParen parameter RParen LBrace block RBrace
    (35) declaration -> . type Identifier
    (36) declaration -> . type Identifier Assign expression
    (37) declaration -> . type Identifier dim_list
    (41) declaration -> . type Identifier dim_list Assign init_list
    (6) type -> . Int

    Int             shift and go to state 7

    element                        shift and go to state 3
    function                       shift and go to state 4
    declaration                    shift and go to state 5
    type                           shift and go to state 6

state 2

    (5) program -> empty .

    Int             reduce using rule 5 (program -> empty .)
    $end            reduce using rule 5 (program -> empty .)


state 3

    (2) program -> program element .

    Int             reduce using rule 2 (program -> program element .)
    $end            reduce using rule 2 (program -> program element .)


state 4

    (3) element -> function .

    Int             reduce using rule 3 (element -> function .)
    $end            reduce using rule 3 (element -> function .)


state 5

    (4) element -> declaration . Semi

    Semi            shift and go to state 8


state 6

    (7) function -> type . Identifier LParen parameter RParen LBrace block RBrace
    (35) declaration -> type . Identifier
    (36) declaration -> type . Identifier Assign expression
    (37) declaration -> type . Identifier dim_list
    (41) declaration -> type . Identifier dim_list Assign init_list

    Identifier      shift and go to state 9


state 7

    (6) type -> Int .

    Identifier      reduce using rule 6 (type -> Int .)


state 8

    (4) element -> declaration Semi .

    Int             reduce using rule 4 (element -> declaration Semi .)
    $end            reduce using rule 4 (element -> declaration Semi .)


state 9

    (7) function -> type Identifier . LParen parameter RParen LBrace block RBrace
    (35) declaration -> type Identifier .
    (36) declaration -> type Identifier . Assign expression
    (37) declaration -> type Identifier . dim_list
    (41) declaration -> type Identifier . dim_list Assign init_list
    (38) dim_list -> . LBracket RBracket
    (39) dim_list -> . LBracket Integer RBracket
    (40) dim_list -> . dim_list LBracket Integer RBracket

    LParen          shift and go to state 10
    Semi            reduce using rule 35 (declaration -> type Identifier .)
    Assign          shift and go to state 11
    LBracket        shift and go to state 13

    dim_list                       shift and go to state 12

state 10

    (7) function -> type Identifier LParen . parameter RParen LBrace block RBrace
    (8) parameter -> . parameter params
    (9) parameter -> . empty
    (1) empty -> .

    RParen          reduce using rule 1 (empty -> .)
    Comma           reduce using rule 1 (empty -> .)
    Int             reduce using rule 1 (empty -> .)

    parameter                      shift and go to state 14
    empty                          shift and go to state 15

state 11

    (36) declaration -> type Identifier Assign . expression
    (45) expression -> . assignment
    (46) assignment -> . conditional
    (68) assignment -> . postfix Assign expression
    (47) conditional -> . logical_or
    (85) conditional -> . logical_or Question expression Colon conditional
    (58) postfix -> . primary
    (63) postfix -> . Identifier LParen expression_list RParen
    (64) postfix -> . postfix LBracket expression RBracket
    (48) logical_or -> . logical_and
    (69) logical_or -> . logical_or Or logical_and
    (86) primary -> . Integer
    (87) primary -> . Identifier
    (88) primary -> . LParen expression RParen
    (49) logical_and -> . bit_or
    (70) logical_and -> . logical_and And bit_or
    (50) bit_or -> . xor
    (71) bit_or -> . bit_or BitOr xor
    (51) xor -> . bit_and
    (72) xor -> . xor Xor bit_and
    (52) bit_and -> . equality
    (73) bit_and -> . bit_and BitAnd equality
    (53) equality -> . relational
    (74) equality -> . equality NotEqual relational
    (75) equality -> . equality Equal relational
    (54) relational -> . additive
    (76) relational -> . relational Less additive
    (77) relational -> . relational Greater additive
    (78) relational -> . relational LessEqual additive
    (79) relational -> . relational GreaterEqual additive
    (55) additive -> . multiplicative
    (80) additive -> . additive Plus multiplicative
    (81) additive -> . additive Minus multiplicative
    (56) multiplicative -> . unary
    (82) multiplicative -> . multiplicative Mul unary
    (83) multiplicative -> . multiplicative Div unary
    (84) multiplicative -> . multiplicative Mod unary
    (57) unary -> . postfix
    (65) unary -> . Minus unary
    (66) unary -> . BitNot unary
    (67) unary -> . Not unary

    Identifier      shift and go to state 16
    Integer         shift and go to state 25
    LParen          shift and go to state 23
    Minus           shift and go to state 33
    BitNot          shift and go to state 35
    Not             shift and go to state 36

    expression                     shift and go to state 17
    assignment                     shift and go to state 18
    conditional                    shift and go to state 19
    postfix                        shift and go to state 20
    logical_or                     shift and go to state 21
    primary                        shift and go to state 22
    logical_and                    shift and go to state 24
    bit_or                         shift and go to state 26
    xor                            shift and go to state 27
    bit_and                        shift and go to state 28
    equality                       shift and go to state 29
    relational                     shift and go to state 30
    additive                       shift and go to state 31
    multiplicative                 shift and go to state 32
    unary                          shift and go to state 34

state 12

    (37) declaration -> type Identifier dim_list .
    (41) declaration -> type Identifier dim_list . Assign init_list
    (40) dim_list -> dim_list . LBracket Integer RBracket

    Semi            reduce using rule 37 (declaration -> type Identifier dim_list .)
    RParen          reduce using rule 37 (declaration -> type Identifier dim_list .)
    Comma           reduce using rule 37 (declaration -> type Identifier dim_list .)
    Int             reduce using rule 37 (declaration -> type Identifier dim_list .)
    Assign          shift and go to state 37
    LBracket        shift and go to state 38


state 13

    (38) dim_list -> LBracket . RBracket
    (39) dim_list -> LBracket . Integer RBracket

    RBracket        shift and go to state 39
    Integer         shift and go to state 40


state 14

    (7) function -> type Identifier LParen parameter . RParen LBrace block RBrace
    (8) parameter -> parameter . params
    (10) params -> . Comma declaration
    (11) params -> . declaration
    (12) params -> . type Identifier dim_list
    (35) declaration -> . type Identifier
    (36) declaration -> . type Identifier Assign expression
    (37) declaration -> . type Identifier dim_list
    (41) declaration -> . type Identifier dim_list Assign init_list
    (6) type -> . Int

    RParen          shift and go to state 42
    Comma           shift and go to state 44
    Int             shift and go to state 7

    type                           shift and go to state 41
    params                         shift and go to state 43
    declaration                    shift and go to state 45

state 15

    (9) parameter -> empty .

    RParen          reduce using rule 9 (parameter -> empty .)
    Comma           reduce using rule 9 (parameter -> empty .)
    Int             reduce using rule 9 (parameter -> empty .)


state 16

    (63) postfix -> Identifier . LParen expression_list RParen
    (87) primary -> Identifier .

  ! shift/reduce conflict for LParen resolved as shift
    LParen          shift and go to state 46
    Assign          reduce using rule 87 (primary -> Identifier .)
    LBracket        reduce using rule 87 (primary -> Identifier .)
    Mul             reduce using rule 87 (primary -> Identifier .)
    Div             reduce using rule 87 (primary -> Identifier .)
    Mod             reduce using rule 87 (primary -> Identifier .)
    Plus            reduce using rule 87 (primary -> Identifier .)
    Minus           reduce using rule 87 (primary -> Identifier .)
    Less            reduce using rule 87 (primary -> Identifier .)
    Greater         reduce using rule 87 (primary -> Identifier .)
    LessEqual       reduce using rule 87 (primary -> Identifier .)
    GreaterEqual    reduce using rule 87 (primary -> Identifier .)
    NotEqual        reduce using rule 87 (primary -> Identifier .)
    Equal           reduce using rule 87 (primary -> Identifier .)
    BitAnd          reduce using rule 87 (primary -> Identifier .)
    Xor             reduce using rule 87 (primary -> Identifier .)
    BitOr           reduce using rule 87 (primary -> Identifier .)
    And             reduce using rule 87 (primary -> Identifier .)
    Question        reduce using rule 87 (primary -> Identifier .)
    Or              reduce using rule 87 (primary -> Identifier .)
    Semi            reduce using rule 87 (primary -> Identifier .)
    RParen          reduce using rule 87 (primary -> Identifier .)
    Comma           reduce using rule 87 (primary -> Identifier .)
    Int             reduce using rule 87 (primary -> Identifier .)
    RBracket        reduce using rule 87 (primary -> Identifier .)
    Colon           reduce using rule 87 (primary -> Identifier .)
    Identifier      reduce using rule 87 (primary -> Identifier .)
    Integer         reduce using rule 87 (primary -> Identifier .)
    BitNot          reduce using rule 87 (primary -> Identifier .)
    Not             reduce using rule 87 (primary -> Identifier .)

  ! LParen          [ reduce using rule 87 (primary -> Identifier .) ]


state 17

    (36) declaration -> type Identifier Assign expression .

    Semi            reduce using rule 36 (declaration -> type Identifier Assign expression .)
    RParen          reduce using rule 36 (declaration -> type Identifier Assign expression .)
    Comma           reduce using rule 36 (declaration -> type Identifier Assign expression .)
    Int             reduce using rule 36 (declaration -> type Identifier Assign expression .)


state 18

    (45) expression -> assignment .

    Semi            reduce using rule 45 (expression -> assignment .)
    RParen          reduce using rule 45 (expression -> assignment .)
    Comma           reduce using rule 45 (expression -> assignment .)
    Int             reduce using rule 45 (expression -> assignment .)
    RBracket        reduce using rule 45 (expression -> assignment .)
    Colon           reduce using rule 45 (expression -> assignment .)
    Identifier      reduce using rule 45 (expression -> assignment .)
    Integer         reduce using rule 45 (expression -> assignment .)
    LParen          reduce using rule 45 (expression -> assignment .)
    Minus           reduce using rule 45 (expression -> assignment .)
    BitNot          reduce using rule 45 (expression -> assignment .)
    Not             reduce using rule 45 (expression -> assignment .)


state 19

    (46) assignment -> conditional .

    Semi            reduce using rule 46 (assignment -> conditional .)
    RParen          reduce using rule 46 (assignment -> conditional .)
    Comma           reduce using rule 46 (assignment -> conditional .)
    Int             reduce using rule 46 (assignment -> conditional .)
    RBracket        reduce using rule 46 (assignment -> conditional .)
    Colon           reduce using rule 46 (assignment -> conditional .)
    Identifier      reduce using rule 46 (assignment -> conditional .)
    Integer         reduce using rule 46 (assignment -> conditional .)
    LParen          reduce using rule 46 (assignment -> conditional .)
    Minus           reduce using rule 46 (assignment -> conditional .)
    BitNot          reduce using rule 46 (assignment -> conditional .)
    Not             reduce using rule 46 (assignment -> conditional .)


state 20

    (68) assignment -> postfix . Assign expression
    (64) postfix -> postfix . LBracket expression RBracket
    (57) unary -> postfix .

    Assign          shift and go to state 47
    LBracket        shift and go to state 48
    Mul             reduce using rule 57 (unary -> postfix .)
    Div             reduce using rule 57 (unary -> postfix .)
    Mod             reduce using rule 57 (unary -> postfix .)
    Plus            reduce using rule 57 (unary -> postfix .)
    Minus           reduce using rule 57 (unary -> postfix .)
    Less            reduce using rule 57 (unary -> postfix .)
    Greater         reduce using rule 57 (unary -> postfix .)
    LessEqual       reduce using rule 57 (unary -> postfix .)
    GreaterEqual    reduce using rule 57 (unary -> postfix .)
    NotEqual        reduce using rule 57 (unary -> postfix .)
    Equal           reduce using rule 57 (unary -> postfix .)
    BitAnd          reduce using rule 57 (unary -> postfix .)
    Xor             reduce using rule 57 (unary -> postfix .)
    BitOr           reduce using rule 57 (unary -> postfix .)
    And             reduce using rule 57 (unary -> postfix .)
    Question        reduce using rule 57 (unary -> postfix .)
    Or              reduce using rule 57 (unary -> postfix .)
    Semi            reduce using rule 57 (unary -> postfix .)
    RParen          reduce using rule 57 (unary -> postfix .)
    Comma           reduce using rule 57 (unary -> postfix .)
    Int             reduce using rule 57 (unary -> postfix .)
    RBracket        reduce using rule 57 (unary -> postfix .)
    Colon           reduce using rule 57 (unary -> postfix .)
    Identifier      reduce using rule 57 (unary -> postfix .)
    Integer         reduce using rule 57 (unary -> postfix .)
    LParen          reduce using rule 57 (unary -> postfix .)
    BitNot          reduce using rule 57 (unary -> postfix .)
    Not             reduce using rule 57 (unary -> postfix .)


state 21

    (47) conditional -> logical_or .
    (85) conditional -> logical_or . Question expression Colon conditional
    (69) logical_or -> logical_or . Or logical_and

    Semi            reduce using rule 47 (conditional -> logical_or .)
    RParen          reduce using rule 47 (conditional -> logical_or .)
    Comma           reduce using rule 47 (conditional -> logical_or .)
    Int             reduce using rule 47 (conditional -> logical_or .)
    RBracket        reduce using rule 47 (conditional -> logical_or .)
    Colon           reduce using rule 47 (conditional -> logical_or .)
    Identifier      reduce using rule 47 (conditional -> logical_or .)
    Integer         reduce using rule 47 (conditional -> logical_or .)
    LParen          reduce using rule 47 (conditional -> logical_or .)
    Minus           reduce using rule 47 (conditional -> logical_or .)
    BitNot          reduce using rule 47 (conditional -> logical_or .)
    Not             reduce using rule 47 (conditional -> logical_or .)
    Question        shift and go to state 49
    Or              shift and go to state 50


state 22

    (58) postfix -> primary .

    Assign          reduce using rule 58 (postfix -> primary .)
    LBracket        reduce using rule 58 (postfix -> primary .)
    Mul             reduce using rule 58 (postfix -> primary .)
    Div             reduce using rule 58 (postfix -> primary .)
    Mod             reduce using rule 58 (postfix -> primary .)
    Plus            reduce using rule 58 (postfix -> primary .)
    Minus           reduce using rule 58 (postfix -> primary .)
    Less            reduce using rule 58 (postfix -> primary .)
    Greater         reduce using rule 58 (postfix -> primary .)
    LessEqual       reduce using rule 58 (postfix -> primary .)
    GreaterEqual    reduce using rule 58 (postfix -> primary .)
    NotEqual        reduce using rule 58 (postfix -> primary .)
    Equal           reduce using rule 58 (postfix -> primary .)
    BitAnd          reduce using rule 58 (postfix -> primary .)
    Xor             reduce using rule 58 (postfix -> primary .)
    BitOr           reduce using rule 58 (postfix -> primary .)
    And             reduce using rule 58 (postfix -> primary .)
    Question        reduce using rule 58 (postfix -> primary .)
    Or              reduce using rule 58 (postfix -> primary .)
    Semi            reduce using rule 58 (postfix -> primary .)
    RParen          reduce using rule 58 (postfix -> primary .)
    Comma           reduce using rule 58 (postfix -> primary .)
    Int             reduce using rule 58 (postfix -> primary .)
    RBracket        reduce using rule 58 (postfix -> primary .)
    Colon           reduce using rule 58 (postfix -> primary .)
    Identifier      reduce using rule 58 (postfix -> primary .)
    Integer         reduce using rule 58 (postfix -> primary .)
    LParen          reduce using rule 58 (postfix -> primary .)
    BitNot          reduce using rule 58 (postfix -> primary .)
    Not             reduce using rule 58 (postfix -> primary .)


state 23

    (88) primary -> LParen . expression RParen
    (45) expression -> . assignment
    (46) assignment -> . conditional
    (68) assignment -> . postfix Assign expression
    (47) conditional -> . logical_or
    (85) conditional -> . logical_or Question expression Colon conditional
    (58) postfix -> . primary
    (63) postfix -> . Identifier LParen expression_list RParen
    (64) postfix -> . postfix LBracket expression RBracket
    (48) logical_or -> . logical_and
    (69) logical_or -> . logical_or Or logical_and
    (86) primary -> . Integer
    (87) primary -> . Identifier
    (88) primary -> . LParen expression RParen
    (49) logical_and -> . bit_or
    (70) logical_and -> . logical_and And bit_or
    (50) bit_or -> . xor
    (71) bit_or -> . bit_or BitOr xor
    (51) xor -> . bit_and
    (72) xor -> . xor Xor bit_and
    (52) bit_and -> . equality
    (73) bit_and -> . bit_and BitAnd equality
    (53) equality -> . relational
    (74) equality -> . equality NotEqual relational
    (75) equality -> . equality Equal relational
    (54) relational -> . additive
    (76) relational -> . relational Less additive
    (77) relational -> . relational Greater additive
    (78) relational -> . relational LessEqual additive
    (79) relational -> . relational GreaterEqual additive
    (55) additive -> . multiplicative
    (80) additive -> . additive Plus multiplicative
    (81) additive -> . additive Minus multiplicative
    (56) multiplicative -> . unary
    (82) multiplicative -> . multiplicative Mul unary
    (83) multiplicative -> . multiplicative Div unary
    (84) multiplicative -> . multiplicative Mod unary
    (57) unary -> . postfix
    (65) unary -> . Minus unary
    (66) unary -> . BitNot unary
    (67) unary -> . Not unary

    Identifier      shift and go to state 16
    Integer         shift and go to state 25
    LParen          shift and go to state 23
    Minus           shift and go to state 33
    BitNot          shift and go to state 35
    Not             shift and go to state 36

    expression                     shift and go to state 51
    assignment                     shift and go to state 18
    conditional                    shift and go to state 19
    postfix                        shift and go to state 20
    logical_or                     shift and go to state 21
    primary                        shift and go to state 22
    logical_and                    shift and go to state 24
    bit_or                         shift and go to state 26
    xor                            shift and go to state 27
    bit_and                        shift and go to state 28
    equality                       shift and go to state 29
    relational                     shift and go to state 30
    additive                       shift and go to state 31
    multiplicative                 shift and go to state 32
    unary                          shift and go to state 34

state 24

    (48) logical_or -> logical_and .
    (70) logical_and -> logical_and . And bit_or

    Question        reduce using rule 48 (logical_or -> logical_and .)
    Or              reduce using rule 48 (logical_or -> logical_and .)
    Semi            reduce using rule 48 (logical_or -> logical_and .)
    RParen          reduce using rule 48 (logical_or -> logical_and .)
    Comma           reduce using rule 48 (logical_or -> logical_and .)
    Int             reduce using rule 48 (logical_or -> logical_and .)
    RBracket        reduce using rule 48 (logical_or -> logical_and .)
    Colon           reduce using rule 48 (logical_or -> logical_and .)
    Identifier      reduce using rule 48 (logical_or -> logical_and .)
    Integer         reduce using rule 48 (logical_or -> logical_and .)
    LParen          reduce using rule 48 (logical_or -> logical_and .)
    Minus           reduce using rule 48 (logical_or -> logical_and .)
    BitNot          reduce using rule 48 (logical_or -> logical_and .)
    Not             reduce using rule 48 (logical_or -> logical_and .)
    And             shift and go to state 52


state 25

    (86) primary -> Integer .

    Assign          reduce using rule 86 (primary -> Integer .)
    LBracket        reduce using rule 86 (primary -> Integer .)
    Mul             reduce using rule 86 (primary -> Integer .)
    Div             reduce using rule 86 (primary -> Integer .)
    Mod             reduce using rule 86 (primary -> Integer .)
    Plus            reduce using rule 86 (primary -> Integer .)
    Minus           reduce using rule 86 (primary -> Integer .)
    Less            reduce using rule 86 (primary -> Integer .)
    Greater         reduce using rule 86 (primary -> Integer .)
    LessEqual       reduce using rule 86 (primary -> Integer .)
    GreaterEqual    reduce using rule 86 (primary -> Integer .)
    NotEqual        reduce using rule 86 (primary -> Integer .)
    Equal           reduce using rule 86 (primary -> Integer .)
    BitAnd          reduce using rule 86 (primary -> Integer .)
    Xor             reduce using rule 86 (primary -> Integer .)
    BitOr           reduce using rule 86 (primary -> Integer .)
    And             reduce using rule 86 (primary -> Integer .)
    Question        reduce using rule 86 (primary -> Integer .)
    Or              reduce using rule 86 (primary -> Integer .)
    Semi            reduce using rule 86 (primary -> Integer .)
    RParen          reduce using rule 86 (primary -> Integer .)
    Comma           reduce using rule 86 (primary -> Integer .)
    Int             reduce using rule 86 (primary -> Integer .)
    RBracket        reduce using rule 86 (primary -> Integer .)
    Colon           reduce using rule 86 (primary -> Integer .)
    Identifier      reduce using rule 86 (primary -> Integer .)
    Integer         reduce using rule 86 (primary -> Integer .)
    LParen          reduce using rule 86 (primary -> Integer .)
    BitNot          reduce using rule 86 (primary -> Integer .)
    Not             reduce using rule 86 (primary -> Integer .)


state 26

    (49) logical_and -> bit_or .
    (71) bit_or -> bit_or . BitOr xor

    And             reduce using rule 49 (logical_and -> bit_or .)
    Question        reduce using rule 49 (logical_and -> bit_or .)
    Or              reduce using rule 49 (logical_and -> bit_or .)
    Semi            reduce using rule 49 (logical_and -> bit_or .)
    RParen          reduce using rule 49 (logical_and -> bit_or .)
    Comma           reduce using rule 49 (logical_and -> bit_or .)
    Int             reduce using rule 49 (logical_and -> bit_or .)
    RBracket        reduce using rule 49 (logical_and -> bit_or .)
    Colon           reduce using rule 49 (logical_and -> bit_or .)
    Identifier      reduce using rule 49 (logical_and -> bit_or .)
    Integer         reduce using rule 49 (logical_and -> bit_or .)
    LParen          reduce using rule 49 (logical_and -> bit_or .)
    Minus           reduce using rule 49 (logical_and -> bit_or .)
    BitNot          reduce using rule 49 (logical_and -> bit_or .)
    Not             reduce using rule 49 (logical_and -> bit_or .)
    BitOr           shift and go to state 53


state 27

    (50) bit_or -> xor .
    (72) xor -> xor . Xor bit_and

    BitOr           reduce using rule 50 (bit_or -> xor .)
    And             reduce using rule 50 (bit_or -> xor .)
    Question        reduce using rule 50 (bit_or -> xor .)
    Or              reduce using rule 50 (bit_or -> xor .)
    Semi            reduce using rule 50 (bit_or -> xor .)
    RParen          reduce using rule 50 (bit_or -> xor .)
    Comma           reduce using rule 50 (bit_or -> xor .)
    Int             reduce using rule 50 (bit_or -> xor .)
    RBracket        reduce using rule 50 (bit_or -> xor .)
    Colon           reduce using rule 50 (bit_or -> xor .)
    Identifier      reduce using rule 50 (bit_or -> xor .)
    Integer         reduce using rule 50 (bit_or -> xor .)
    LParen          reduce using rule 50 (bit_or -> xor .)
    Minus           reduce using rule 50 (bit_or -> xor .)
    BitNot          reduce using rule 50 (bit_or -> xor .)
    Not             reduce using rule 50 (bit_or -> xor .)
    Xor             shift and go to state 54


state 28

    (51) xor -> bit_and .
    (73) bit_and -> bit_and . BitAnd equality

    Xor             reduce using rule 51 (xor -> bit_and .)
    BitOr           reduce using rule 51 (xor -> bit_and .)
    And             reduce using rule 51 (xor -> bit_and .)
    Question        reduce using rule 51 (xor -> bit_and .)
    Or              reduce using rule 51 (xor -> bit_and .)
    Semi            reduce using rule 51 (xor -> bit_and .)
    RParen          reduce using rule 51 (xor -> bit_and .)
    Comma           reduce using rule 51 (xor -> bit_and .)
    Int             reduce using rule 51 (xor -> bit_and .)
    RBracket        reduce using rule 51 (xor -> bit_and .)
    Colon           reduce using rule 51 (xor -> bit_and .)
    Identifier      reduce using rule 51 (xor -> bit_and .)
    Integer         reduce using rule 51 (xor -> bit_and .)
    LParen          reduce using rule 51 (xor -> bit_and .)
    Minus           reduce using rule 51 (xor -> bit_and .)
    BitNot          reduce using rule 51 (xor -> bit_and .)
    Not             reduce using rule 51 (xor -> bit_and .)
    BitAnd          shift and go to state 55


state 29

    (52) bit_and -> equality .
    (74) equality -> equality . NotEqual relational
    (75) equality -> equality . Equal relational

    BitAnd          reduce using rule 52 (bit_and -> equality .)
    Xor             reduce using rule 52 (bit_and -> equality .)
    BitOr           reduce using rule 52 (bit_and -> equality .)
    And             reduce using rule 52 (bit_and -> equality .)
    Question        reduce using rule 52 (bit_and -> equality .)
    Or              reduce using rule 52 (bit_and -> equality .)
    Semi            reduce using rule 52 (bit_and -> equality .)
    RParen          reduce using rule 52 (bit_and -> equality .)
    Comma           reduce using rule 52 (bit_and -> equality .)
    Int             reduce using rule 52 (bit_and -> equality .)
    RBracket        reduce using rule 52 (bit_and -> equality .)
    Colon           reduce using rule 52 (bit_and -> equality .)
    Identifier      reduce using rule 52 (bit_and -> equality .)
    Integer         reduce using rule 52 (bit_and -> equality .)
    LParen          reduce using rule 52 (bit_and -> equality .)
    Minus           reduce using rule 52 (bit_and -> equality .)
    BitNot          reduce using rule 52 (bit_and -> equality .)
    Not             reduce using rule 52 (bit_and -> equality .)
    NotEqual        shift and go to state 56
    Equal           shift and go to state 57


state 30

    (53) equality -> relational .
    (76) relational -> relational . Less additive
    (77) relational -> relational . Greater additive
    (78) relational -> relational . LessEqual additive
    (79) relational -> relational . GreaterEqual additive

    NotEqual        reduce using rule 53 (equality -> relational .)
    Equal           reduce using rule 53 (equality -> relational .)
    BitAnd          reduce using rule 53 (equality -> relational .)
    Xor             reduce using rule 53 (equality -> relational .)
    BitOr           reduce using rule 53 (equality -> relational .)
    And             reduce using rule 53 (equality -> relational .)
    Question        reduce using rule 53 (equality -> relational .)
    Or              reduce using rule 53 (equality -> relational .)
    Semi            reduce using rule 53 (equality -> relational .)
    RParen          reduce using rule 53 (equality -> relational .)
    Comma           reduce using rule 53 (equality -> relational .)
    Int             reduce using rule 53 (equality -> relational .)
    RBracket        reduce using rule 53 (equality -> relational .)
    Colon           reduce using rule 53 (equality -> relational .)
    Identifier      reduce using rule 53 (equality -> relational .)
    Integer         reduce using rule 53 (equality -> relational .)
    LParen          reduce using rule 53 (equality -> relational .)
    Minus           reduce using rule 53 (equality -> relational .)
    BitNot          reduce using rule 53 (equality -> relational .)
    Not             reduce using rule 53 (equality -> relational .)
    Less            shift and go to state 58
    Greater         shift and go to state 59
    LessEqual       shift and go to state 60
    GreaterEqual    shift and go to state 61


state 31

    (54) relational -> additive .
    (80) additive -> additive . Plus multiplicative
    (81) additive -> additive . Minus multiplicative
